kubernetes/overlays/demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: trac-demo
spec: {}
status: {}
