kubernetes/overlays/demo/patch-api-resources.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: trac-tcm-api

spec:
  template:
    spec:
      containers:
      - name: trac-tcm-api
        resources:
          limits:
            cpu: "1"
            memory: 256Mi
          requests:
            cpu: "1"
            memory: 256Mi
