kubernetes/overlays/demo/patch-mongo-resources.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: trac-tcm-mongo

spec:
  template:
    spec:
      containers:
      - name: trac-tcm-mongo
        resources:
          limits:
            cpu: "1"
            memory: 128Mi
          requests:
            cpu: "1"
            memory: 128Mi
